--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -31,6 +31,11 @@
     "styled-components": "^5.3.5",
     "theme-ui": "^0.14.5",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "@linaria/babel-preset": "^3.0.0-beta.21",
+    "@linaria/core": "^3.0.0-beta.21",
+    "@linaria/react": "^3.0.0-beta.21",
+    "@linaria/shaker": "^3.0.0-beta.21",
+    "@vanilla-extract/css": "^1.7.2"
   }
 }
